<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstNumberLabel"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/first"
        android:textColor="#121B4C"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="180dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        android:textColor="#121B4C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNumberLabel" />

    <TextView
        android:id="@+id/secondNumberLabel"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/second"
        android:textAlignment="center"
        android:textColor="#121B4C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNumberLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="180dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        android:textColor="#121B4C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNumber"
        app:layout_constraintTop_toBottomOf="@+id/secondNumberLabel" />

    <TextView
        android:id="@+id/resultadoAviso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/resul"
        android:textAlignment="center"
        android:textColor="#121B4C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondNumber" />

    <TextView
        android:id="@+id/resultadoShow"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="#121B4C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultadoAviso" />

    <Button
        android:id="@+id/somar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:onClick="add"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultadoShow" />

    <Button
        android:id="@+id/subtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="sub"
        android:text="@string/sub"
        app:layout_constraintBottom_toBottomOf="@+id/somar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/somar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/multiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="mult"
        android:text="@string/mult"
        app:layout_constraintEnd_toEndOf="@+id/somar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/somar"
        app:layout_constraintTop_toBottomOf="@+id/somar" />

    <Button
        android:id="@+id/dividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="divd"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="@+id/multiplicar"
        app:layout_constraintEnd_toEndOf="@+id/subtrair"
        app:layout_constraintStart_toStartOf="@+id/subtrair"
        app:layout_constraintTop_toTopOf="@+id/multiplicar" />

    <Button
        android:id="@+id/limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="erase"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/dividir"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/multiplicar"
        app:layout_constraintTop_toBottomOf="@+id/multiplicar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />
</androidx.constraintlayout.widget.ConstraintLayout>